fix some of int-tests