@@ -6,9 +6,11 @@ import org.junit.runners.Suite;
 @RunWith(Suite.class)
 @Suite.SuiteClasses({
         TwoChecker2SameConsole.class,
-        TestConsoleWeb.class,
+        //TestConsoleWeb.class,
         TestAllCheckerLeader.class,
         CheckCrdtRedisByProxy.class
 })
 public class CheckerAllTest {
+
+    /* add -Djdk.attach.allowAttachSelf=true for jdk11*/
 }
